aws/vpc-nat-gw.tf
resource "aws_eip" "nat" {
  vpc = true
}

resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.a.id

  tags = {
    Name      = "dor2-aws-1-nat-gw"
    Group     = "networking"
    Terraform = true
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.igw]
}
