aws/vpc-subnets-public.tf
resource "aws_subnet" "a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "eu-central-1a"

  tags = {
    Name = "dor2-aws-1-pub-a"
    Group     = "networking"
    Terraform = true
  }
}

resource "aws_subnet" "b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "eu-central-1b"

  tags = {
    Name = "dor2-aws-1-pub-b"
    Group     = "networking"
    Terraform = true
  }
}
